[package]
name = "redis-clone"
version = "0.1.0"
authors = ["Rich Wandell <richwandell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
spmc = "0.3.0"
shell-words = "1.0.0"
redis-protocol-parser = "0.1.2"
redis-protocol = "2.0.0"
resp = "1.0.2"
glob = "0.3.0"
multiqueue = "0.3.2"
encoding_rs = "0.8.28"
encoding_rs_io = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true
